--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     # Переменные окружения, которые будут доступны во всех шагах
     env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.ACTION_TOKEN }}
 
     steps:
       # Шаг 1: Клонирование репозитория
