--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,70 +1,47 @@
 name: Deploy Supabase Migrations
 
+# Триггеры: запускать этот workflow при пуше в ветки main или develop
 on:
   push:
     branches:
       - main
       - develop
-  workflow_dispatch:
+  workflow_dispatch: # Позволяет запускать вручную из интерфейса GitHub
 
 jobs:
   deploy-migrations:
     name: Deploy Database Migrations
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Запускать на виртуальной машине с Ubuntu
 
+    # Переменные окружения, которые будут доступны во всех шагах
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.ACTION_TOKEN }}
 
     steps:
-      # --- ШАГ 1: Скачиваем код ---
+      # Шаг 1: Клонирование репозитория
+      # Скачиваем код нашей ветки на виртуальную машину
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # --- ШАГ 2: Диагностика перед установкой ---
-      - name: Show YML file content
-        run: |
-          echo "================================================="
-          echo ">>> 1. DEBUG: Checking workflow file content..."
-          echo "================================================="
-          cat .github/workflows/deploy.yml
-          echo "================================================="
-
-      # --- ШАГ 3: Устанавливаем CLI ---
+      # Шаг 2: Установка Supabase CLI
+      # Используем официальный Action от Supabase для установки CLI
       - name: Setup Supabase CLI
         uses: supabase/setup-cli-action@v1
 
-      # --- ШАГ 4: Диагностика после установки ---
-      - name: Check environment and CLI version
-        run: |
-          echo "================================================="
-          echo ">>> 2. DEBUG: Checking environment..."
-          echo "================================================="
-          echo "GitHub Event: ${{ github.event_name }}"
-          echo "Branch/Ref: ${{ github.ref }}"
-          echo "Is SUPABASE_ACCESS_TOKEN set? (should not be empty): ${{ env.SUPABASE_ACCESS_TOKEN != '' }}"
-          echo "---"
-          echo "Checking Supabase CLI version..."
-          supabase -v
-          echo "================================================="
-
-      # --- ШАГ 5: Деплой в DEV ---
-      - name: 🚀 Deploy migrations to DEV
+      # Шаг 3: Развертывание миграций в DEV
+      # Этот шаг выполнится ТОЛЬКО если событие произошло в ветке 'develop'
+      - name: Deploy migrations to DEV
         if: github.ref == 'refs/heads/develop'
         run: |
-          echo "================================================="
-          echo ">>> 3. ACTION: Deploying to DEV environment..."
-          echo "================================================="
+          echo "Deploying to DEV environment..."
           supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID_DEV }}
           supabase db push --password ${{ secrets.SUPABASE_DB_PASSWORD_DEV }}
-          echo "================================================="
 
-      # --- ШАГ 6: Деплой в PROD ---
-      - name: 🚀 Deploy migrations to PROD
+      # Шаг 4: Развертывание миграций в PROD
+      # Этот шаг выполнится ТОЛЬКО если событие произошло в ветке 'main'
+      - name: Deploy migrations to PROD
         if: github.ref == 'refs/heads/main'
         run: |
-          echo "================================================="
-          echo ">>> 3. ACTION: Deploying to PROD environment..."
-          echo "================================================="
+          echo "Deploying to PROD environment..."
           supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID_PROD }}
           supabase db push --password ${{ secrets.SUPABASE_DB_PASSWORD_PROD }}
-          echo "================================================="
