--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,90 @@
-name: Deploy Supabase Migrations
+name: Advanced Supabase CI/CD
 
-# Триггеры: запускать этот workflow при пуше в ветки main или develop
 on:
   push:
     branches:
       - main
       - develop
-  workflow_dispatch: # Позволяет запускать вручную из интерфейса GitHub
+  workflow_dispatch:
 
 jobs:
-  deploy-migrations:
-    name: Deploy Database Migrations
-    runs-on: ubuntu-latest # Запускать на виртуальной машине с Ubuntu
+  # --- ЗАДАЧА №1: Проверка качества кода ---
+  lint-and-test:
+    name:  Lint & Test Migrations
+    runs-on: ubuntu-latest
 
-    # Переменные окружения, которые будут доступны во всех шагах
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli-action@v1
+
+      # Этот шаг запускает локальный Supabase, чтобы проверить миграции
+      - name: Test migrations on a clean local database
+        run: |
+          echo ">>> Starting local Supabase instance..."
+          supabase start
+          echo ">>> Testing migrations by resetting the database..."
+          supabase db reset
+          echo ">>> Migration test successful!"
+
+  # --- ЗАДАЧА №2: Деплой (Запустится только если lint-and-test прошел успешно) ---
+  deploy:
+    name: Deploy to Supabase
+    runs-on: ubuntu-latest
+    # Зависимость: эта задача ждет, пока `lint-and-test` завершится успешно
+    needs: [lint-and-test]
+
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.ACTION_TOKEN }}
 
     steps:
-      # Шаг 1: Клонирование репозитория
-      # Скачиваем код нашей ветки на виртуальную машину
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Шаг 2: Установка Supabase CLI
-      # Используем официальный Action от Supabase для установки CLI
       - name: Setup Supabase CLI
         uses: supabase/setup-cli-action@v1
 
-      # Шаг 3: Развертывание миграций в DEV
-      # Этот шаг выполнится ТОЛЬКО если событие произошло в ветке 'develop'
-      - name: Deploy migrations to DEV
+      # --- ШАГ ДЕПЛОЯ В DEV ---
+      - name: Deploy Database & Edge Functions to DEV
         if: github.ref == 'refs/heads/develop'
         run: |
-          echo "Deploying to DEV environment..."
+          echo ">>> Linking to DEV project..."
           supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID_DEV }}
+          echo ">>> Deploying database migrations..."
           supabase db push --password ${{ secrets.SUPABASE_DB_PASSWORD_DEV }}
+          echo ">>> Deploying Edge Functions..."
+          supabase functions deploy --project-ref ${{ secrets.SUPABASE_PROJECT_ID_DEV }}
 
-      # Шаг 4: Развертывание миграций в PROD
-      # Этот шаг выполнится ТОЛЬКО если событие произошло в ветке 'main'
-      - name: Deploy migrations to PROD
+      # --- ШАГ ДЕПЛОЯ В PROD ---
+      - name: Deploy Database & Edge Functions to PROD
         if: github.ref == 'refs/heads/main'
         run: |
-          echo "Deploying to PROD environment..."
+          echo ">>> Linking to PROD project..."
           supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID_PROD }}
+          echo ">>> Deploying database migrations..."
           supabase db push --password ${{ secrets.SUPABASE_DB_PASSWORD_PROD }}
+          echo ">>> Deploying Edge Functions..."
+          supabase functions deploy --project-ref ${{ secrets.SUPABASE_PROJECT_ID_PROD }}
+
+      # --- ШАГ УВЕДОМЛЕНИЯ В SLACK (Выполнится в любом случае после деплоя) ---
+      - name: Send Slack Notification on Success
+        if: success() # Выполнить только если предыдущие шаги были успешны
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow # Какую информацию отправлять
+          text: '✅ Deployment to `${{ github.ref_name }}` completed successfully!'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Send Slack Notification on Failure
+        if: failure() # Выполнить только если что-то сломалось
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow
+          text: '🚨 Deployment to `${{ github.ref_name }}` FAILED! Check logs.'
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
